unpackaged/main/default/objects/Research_Project_Teams__c/fields/Invite_for_Interviews__c.field-meta.xml
<CustomField>
    <fullName>Invite_for_Interviews__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invite for Interviews</label>
    <type>Checkbox</type>
</CustomField>