unpackaged/main/default/objects/Research_Project_Teams__c/fields/Project_Creator__c.field-meta.xml
<CustomField>
    <fullName>Project_Creator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Creator</label>
    <type>Checkbox</type>
</CustomField>