unpackaged/main/default/objects/Research_Project_Teams__c/fields/Project_Role__c.field-meta.xml
<CustomField>
    <fullName>Project_Role__c</fullName>
    <formula>if(Edit_Access__c ==true,&apos;Researcher&apos;,&apos;Observers&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Role</label>
    <type>Text</type>
</CustomField>